# luna-prefs

./: .gitignore  CMakeLists.txt  Makefile  README.md  oss-pkg-info.yaml
files/pkgconfig/: luna-prefs.pc.in
files/sysbus/: com.palm.preferences.api.json  com.palm.preferences.groups.json  com.palm.preferences.service.role.json.in
include/: lunaprefs.h
libluna-prefs/: CMakeLists.txt  Makefile  lunaprefs.c
libluna-prefs/files/pkgconfig/: luna-prefs.pc.in
luna-prefs-service/: CMakeLists.txt  Makefile  accesschecker.c  accesschecker.h  database.c  database.h  main.c
luna-prop/: CMakeLists.txt  Makefile  main.c
